RESOLVED FIXED77953
[CRASH] bool EventHandler::dispatchSyntheticTouchEventIfEnabled(const PlatformMouseEvent& event) references a NULL pointer
https://bugs.webkit.org/show_bug.cgi?id=77953
Summary [CRASH] bool EventHandler::dispatchSyntheticTouchEventIfEnabled(const Platfor...
Alexander Pavlov (apavlov)
Reported 2012-02-07 02:14:37 PST
Attachments
Patch (1.43 KB, patch)
2012-02-07 02:24 PST, Alexander Pavlov (apavlov)
kling: review+
Alexander Pavlov (apavlov)
Comment 1 2012-02-07 02:24:06 PST
Andreas Kling
Comment 2 2012-02-07 02:26:06 PST
Comment on attachment 125793 [details] Patch r=me
Alexander Pavlov (apavlov)
Comment 3 2012-02-07 02:30:15 PST
Note You need to log in before you can comment on or make changes to this bug.