[CRASH] bool EventHandler::dispatchSyntheticTouchEventIfEnabled(const PlatformMouseEvent& event) references a NULL pointer https://bugs.webkit.org/show_bug.cgi?id=77953

Reviewed by Andreas Kling.

* page/EventHandler.cpp:
(WebCore::EventHandler::dispatchSyntheticTouchEventIfEnabled):

Canonical link: https://commits.webkit.org/94834@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106916 268f45cc-cd09-0410-ab3c-d52691b4dbfc